--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
             <p> Just a sample page with sample text and a sample CTA. Click and nothing will happen.</p>
             <a class="btn btn-primary">Signup now</a>
         </div>
+        <script>
+            var track_signup = document.getElementById('btn btn-primary');
+            analytics.trackLink(track_signup, 'Signup Clicked'
+            );
+        </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     </body>
