--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <div class="text-center">
             <h1>Hello World</h1>
             <p> Just a sample page with sample text and a sample CTA. Click and nothing will happen.</p>
-            <button onclick="track()" class="btn btn-primary">Signup now</button>
+            <button class="btn btn-primary" onclick="track()">Signup now</button>
         </div>
         <script>
             function track() {
                 analysis.track("Signup Clicked")
-            });
+            }
         </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
