--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <script>
             function track() {
-                analysis.track("Signup Clicked")
+                analytics.track("Signup Clicked")
             ;}
         </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
