--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class="text-center">
             <h1>Hello World</h1>
             <p> Just a sample page with sample text and a sample CTA. Click and nothing will happen.</p>
-            <button class="btn btn-primary" onclick="track()">Signup now</button>
+            <button class="btn btn-primary" onclick="trackSign()">Signup now</button>
         </div>
         <script>
-            function track() {
+            function trackSign() {
                 analytics.track("Signup Clicked")
             ;}
         </script>
